Revert "Fixed indentation"
This reverts commit 6ee42670df55e61204253af48658355b10cedb24.

--- a/html/Mushroom_mac_and_cheese.html
+++ b/html/Mushroom_mac_and_cheese.html
@@ -2,76 +2,84 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
-  <link href= '../css/bootstrap.css' rel='stylesheet'>
-  <link href="../css/custom.css" rel="stylesheet">
-  <meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="homepage.html">Student Recipies</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="active">
-          <li><a href="healthy_recipes.html">Healthy</a></li>
-          <li><a href="budget_recipes.html">Budget</a></li>
-          <li><a href="group_recipes.html">Group Meals</a></li>
-          <li><a href="about us.html">About Us</a></li>
-        </ul>
-        <form class="navbar-form navbar-right">
-           <div class="form-group">
-             <input type="text" class="form-control" placeholder="Search">
-           </div>
-           <button type="submit" class="btn btn-default">Submit</button>
-       </form>
-      </div>
-    </nav>
-    <title> Budget Recipies </title>
+
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<link href="../css/custom.css" rel="stylesheet">
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
+<nav class="navbar navbar-default navbar-fixed-top">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="homepage.html">Student Recipies</a>
+  </div>
+  <ul class="nav navbar-nav">
+    <li class="active">
+    <li><a href="healthy_recipes.html">Healthy</a></li>
+    <li><a href="budget_recipes.html">Budget</a></li>
+    <li><a href="group_recipes.html">Group Meals</a></li>
+    <li><a href="about us.html">About Us</a></li>
+  </ul>
+  <form class="navbar-form navbar-right">
+   <div class="form-group">
+     <input type="text" class="form-control" placeholder="Search">
+   </div>
+   <button type="submit" class="btn btn-default">Submit</button>
+ </form>
+</div>
+</nav>
+
+<title> Budget Recipies </title>
 </head>
 
 <body>
-  <h1>Mushroom Mac and Cheese, 42p</h1>
-  <div class= "container">
-    <div class= "row">
-      <div class= col-xs-4>
-        <h2>Ingredients:</h2>
-        <ul>
-          <li>1 onion, 9p (90p/1.5kg, Sainsburys)</li>
-          <li>1 tbsp sunflower oil, 3p (£3/3l)</li>
-          <li>A pinch of salt, 1p (25p/1kg, Sainsburys Basics)</li>
-          <li>1 tbsp flour, 2p (65p/1.5kg)</li>
-          <li>400ml milk – or vegan equivalent, 18p (44p/1l)</li>
-          <li>150g mushrooms, 36p (97p/400g, Sainsburys Basics)</li>
-          <li>Half a ball of mozzarella, 22p (44p, Sainsburys Basics)</li>
-          <li>Scant edge of a teaspoon of mustard, 1p (45p/180g, Sainsburys Basics)</li>
-          <li>200g pasta, 14p (35p/500g Sainsburys Basics)</li>
-          <li>15g hard strong cheese, 18p (£2.30/200g, Sainsburys Basics)</li>
-          <li>A slice of bread, 2p (40p/22 slice loaf, Sainsburys Basics)</li>
-        </ul>
-      </div>
-      <div class= col-xs-8>
-        <h2>Method:</h2>
-        <ol>
-          <li>First peel and finely chop your onion and sling it in a saucepan with a slug of oil.</li>
-          <li>Cook on a gentle heat for a few minutes to soften, season with salt, and sprinkle in the flour. Mix briskly so that the flour coats the onions.</li>
-          <li>Add a liberal splash of milk and beat well to form an oniony paste. It doesn’t look all that at the moment, but don’t worry, it’s going to get better. Add another splash of milk, and another, keeping it moving so it doesn’t catch and burn, nor go stiff and sticky. Stiff and sticky certainly have their uses, but neither of them are needed in this particular scenario. Repeat until all the milk is used up; it will be quite runny at this point, but it will firm up in the oven later.</li>
-          <li>Finely slice your mushrooms, or break them up by hand – I’ll be honest, I like to just smash them between my thumbs, especially at the end of a stressful day. Try it, you might like it. However you choose to dismember them, add them to the pot and stir through. Add your cheese (or cheese equivalent), dollop in the mustard, crank the heat up, and stir through until melted.</li>
-          <li>Remove the pan from the heat, and fold in the pasta. (Folding in is a cookery term that basically means ‘gently stir it without mooshing it about too much’.)</li>
-          <li>Tip it into an ovenproof dish, making sure the pasta is pretty much covered in the sauce, add more cheese on top, and optional breadcrumbs if you like that kind of thing, and pop it in the oven at 180C for 45 minutes.</li>
-        </ol>
-      </div>
+<h1>Mushroom Mac and Cheese, 42p</h1>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
+
+<h2>Ingredients:</h2>
+<ul>
+  <li>1 onion, 9p (90p/1.5kg, Sainsburys)</li>
+  <li>1 tbsp sunflower oil, 3p (£3/3l)</li>
+  <li>A pinch of salt, 1p (25p/1kg, Sainsburys Basics)</li>
+  <li>1 tbsp flour, 2p (65p/1.5kg)</li>
+  <li>400ml milk – or vegan equivalent, 18p (44p/1l)</li>
+  <li>150g mushrooms, 36p (97p/400g, Sainsburys Basics)</li>
+  <li>Half a ball of mozzarella, 22p (44p, Sainsburys Basics)</li>
+  <li>Scant edge of a teaspoon of mustard, 1p (45p/180g, Sainsburys Basics)</li>
+  <li>200g pasta, 14p (35p/500g Sainsburys Basics)</li>
+  <li>15g hard strong cheese, 18p (£2.30/200g, Sainsburys Basics)</li>
+  <li>A slice of bread, 2p (40p/22 slice loaf, Sainsburys Basics)</li>
+</ul>
+</div>
+<div class= col-xs-8>
+<h2>Method:</h2>
+<ol>
+  <li>First peel and finely chop your onion and sling it in a saucepan with a slug of oil.</li>
+  <li>Cook on a gentle heat for a few minutes to soften, season with salt, and sprinkle in the flour. Mix briskly so that the flour coats the onions.</li>
+  <li>Add a liberal splash of milk and beat well to form an oniony paste. It doesn’t look all that at the moment, but don’t worry, it’s going to get better. Add another splash of milk, and another, keeping it moving so it doesn’t catch and burn, nor go stiff and sticky. Stiff and sticky certainly have their uses, but neither of them are needed in this particular scenario. Repeat until all the milk is used up; it will be quite runny at this point, but it will firm up in the oven later.</li>
+  <li>Finely slice your mushrooms, or break them up by hand – I’ll be honest, I like to just smash them between my thumbs, especially at the end of a stressful day. Try it, you might like it. However you choose to dismember them, add them to the pot and stir through. Add your cheese (or cheese equivalent), dollop in the mustard, crank the heat up, and stir through until melted.</li>
+  <li>Remove the pan from the heat, and fold in the pasta. (Folding in is a cookery term that basically means ‘gently stir it without mooshing it about too much’.)</li>
+  <li>Tip it into an ovenproof dish, making sure the pasta is pretty much covered in the sauce, add more cheese on top, and optional breadcrumbs if you like that kind of thing, and pop it in the oven at 180C for 45 minutes.</li>
+</ol>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
     </div>
-  </div>
-  <div class="container">
-    <div class= row>
-      <div class="col-xs-2">
-      </div>
-      <div class="col-xs-8">
-          <img class="center-block" src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
-      </div>
-      <div class="col-xs-2">
-      </div>
-    </div>
-  </div>
+<div class="col-xs-8">
+
+    <img class="center-block" src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
+
+</div>
+<div class="col-xs-2">
+  </div
+</div>
+</div>
+
 </body>
 </html>
